--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@ body{font-family:Calibri;}
 <br>
 <canvas id="canvas" width="585" height="1040"></canvas>
 <br>
-Welcome! Set the search area with [T] and [B], hit [F] to locate more flies, and click
-to give the computer more hints. [C] clears the image.
+Welcome! Set the search area with [T] and [B], and hit [F] to locate more flies. 
+[C] clears the image. [H] uses the last click as a hint of the fly color.
 This program should first color the fly pixels green, and then draw a semitransparent black circle at each fly.
 <br>
 Protocol: My Android LG-D800 takes 2340x4160 (16:9) images. I focus on the vial label, set the camera to the 3-second timer, anticipate the appearance of the 2-second mark, and lift and drop the vial in one fell swoop.
