--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@ body{font-family:Calibri}
 .button{background-color:#088;color:white;font-size:24px;width:120px;text-align:center;padding:5px;display:inline-block}
 .button:hover{background-color:#08F}
 .shade{background-color:#000;position:absolute;opacity:0.3;}
-.ball{width:12px;height:12px;background-color:rgba(0,0,0,0);border-radius:8px;border:2px dotted #000;position:absolute}
+.ball{width:12px;height:12px;background-color:rgba(0,0,0,0);border-radius:8px;border:2px dotted #FFF;position:absolute}
+
 #file_output{position:absolute;right:0;top:35px;width:250px;}
 </style>
 </head>
@@ -21,7 +22,6 @@ body{font-family:Calibri}
 <span id="timeLapse"></span>
 <br>
 <canvas id="canvas" width="585" height="1040"></canvas>
-
 
 <div id="top_s" class="shade"></div>
 <div id="bottom_s" class="shade"></div>
